# rpk-schema-registry

./: Cargo.toml  README.md
firedbg/: target.json
